[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drifterdata"
version = "0.1.0"
description = "SPOT tracker data collection and storage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "pydantic>=2.0.0",
    "streamlit>=1.28.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.15.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "watchdog>=3.0.0",
]

[project.scripts]
drifterdata = "drifterdata.main:main"

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
